--- a/index.html
+++ b/index.html
@@ -354,7 +354,7 @@
                         <div class="portfolio-item padd-15">
                             <div class="portfolio-item-inner shadow-dark">
                                 <div class="portfolio-img">
-                                    <img src="img/portfolio/img.jpg" alt="">
+                                    <img src="img/img.jpg" alt="">
                                 </div>
                             </div>
                         </div>
@@ -363,7 +363,7 @@
                         <div class="portfolio-item padd-15">
                             <div class="portfolio-item-inner shadow-dark">
                                 <div class="portfolio-img">
-                                    <img src="img/portfolio/img.jpg" alt="">
+                                    <img src="img/img.jpgg" alt="">
                                 </div>
                             </div>
                         </div>
@@ -372,7 +372,7 @@
                         <div class="portfolio-item padd-15">
                             <div class="portfolio-item-inner shadow-dark">
                                 <div class="portfolio-img">
-                                    <img src="img/portfolio/img.jpg" alt="">
+                                    <img src="img/img.jpg" alt="">
                                 </div>
                             </div>
                         </div>
@@ -381,7 +381,7 @@
                         <div class="portfolio-item padd-15">
                             <div class="portfolio-item-inner shadow-dark">
                                 <div class="portfolio-img">
-                                    <img src="img/portfolio/img.jpg" alt="">
+                                    <img src="img/img.jpg" alt="">
                                 </div>
                             </div>
                         </div>
@@ -390,7 +390,7 @@
                         <div class="portfolio-item padd-15">
                             <div class="portfolio-item-inner shadow-dark">
                                 <div class="portfolio-img">
-                                    <img src="img/portfolio/img.jpg" alt="">
+                                    <img src="img/img.jpg" alt="">
                                 </div>
                             </div>
                         </div>
@@ -399,7 +399,7 @@
                         <div class="portfolio-item padd-15">
                             <div class="portfolio-item-inner shadow-dark">
                                 <div class="portfolio-img">
-                                    <img src="img/portfolio/img.jpg" alt="">
+                                    <img src="img/img.jpg" alt="">
                                 </div>
                             </div>
                         </div>
@@ -408,7 +408,7 @@
                         <div class="portfolio-item padd-15">
                             <div class="portfolio-item-inner shadow-dark">
                                 <div class="portfolio-img">
-                                    <img src="img/portfolio/img.jpg" alt="">
+                                    <img src="img/img.jpg" alt="">
                                 </div>
                             </div>
                         </div>
@@ -417,7 +417,7 @@
                         <div class="portfolio-item padd-15">
                             <div class="portfolio-item-inner shadow-dark">
                                 <div class="portfolio-img">
-                                    <img src="img/portfolio/img.jpg" alt="">
+                                    <img src="img/img.jpg" alt="">
                                 </div>
                             </div>
                         </div>
@@ -426,7 +426,7 @@
                         <div class="portfolio-item padd-15">
                             <div class="portfolio-item-inner shadow-dark">
                                 <div class="portfolio-img">
-                                    <img src="img/portfolio/img.jpg" alt="">
+                                    <img src="img/img.jpg" alt="">
                                 </div>
                             </div>
                         </div>
