--- a/index.html
+++ b/index.html
@@ -363,7 +363,7 @@
                         <div class="portfolio-item padd-15">
                             <div class="portfolio-item-inner shadow-dark">
                                 <div class="portfolio-img">
-                                    <img src="img/img.jpgg" alt="">
+                                    <img src="img/img.jpg" alt="">
                                 </div>
                             </div>
                         </div>
