--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                                 <br>
                                 I'm a self-taught developer. I love building things from scratch.
                             </p>
-                            <a href="#me" class="hire-btn">System Info</a>
+                            <a href="#me" class="hire-btn">Check Background</a>
                         </div>
                         <div class="home-img">
                             <img src="img/hehe.jpg" alt="">
