Project Section Added
Cleaning the Navbar

--- a/index.html
+++ b/index.html
@@ -5,28 +5,156 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="CSS/style.css">
     <title>Web-Portfolio</title>
 </head>
 
 <body>
+    <!-- Header Start -->
     <header class="master-head">
         <div class="header-left">
-            <a href="" class="logo">
-                <img src="img/hehe.jpg" alt="Avatar" class="avatar">
+            <a href="#landing-page" class="logo">
+                <img src="IMG/hehe.jpg" alt="Avatar" class="avatar">
                 Jhon Melvin Dolot
             </a>
         </div>
         <div class="header-right">
             <nav class="navbar">
                 <ul class="nav">
-                    <li class="nav-list"><a href="" class="btn">Projects</a></li>
+                    <li class="nav-list"><a href="#project" class="btn">Projects</a></li>
                     <li class="nav-list"><a href="" class="btn">About</a></li>
                     <li class="nav-list"><a href="" class="btn">Contact</a></li>
                 </ul>
             </nav>
         </div>
     </header>
+    <!-- Header End -->
+
+    <main class="main-content">
+        <!-- Landing Page Start -->
+        <section class="landing-page" id="landing-page">
+            <div class="container">
+                <div class="row">
+                    <div class="home-info">
+                        <h3 class="hello">Hello, my name is <span class="name">Jhon Melvin Dolot</span></h3>
+                        <h3 class="my-hobby">I'm a <span class="typing">Hungry </span><span class="typed-cursor"
+                                aria-hidden="true">|</span></h3>
+                        <p>
+                            A Computer Engineering Technology student of Polytechnic University of the
+                            Philippines Sta Mesa. 
+                            <br>
+                             A self-taught developer. I love building things from scratch.
+                        </p>
+                        <a href="#me" class="hire-btn">Check Background</a>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- Landing Page End -->
+
+        <!-- Project Start -->
+        <section class="projects" id="project">
+            <div class="container">
+                <div class="row">
+                    <div class="section-title">
+                        <h2>Projects</h2>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="portfolio-heading">
+                        <h2>My List of Projects: </h2>
+                    </div>
+                </div>
+                <div class="row">
+                    <!-- Portfolio Item Start -->
+                    <div class="portfolio-item">
+                        <div class="portfolio-item-inner shadow-dark">
+                            <div class="portfolio-img">
+                                <img src="img/img.jpg" alt="">
+                            </div>
+                        </div>
+                    </div>
+                    <!-- Portfolio Item End -->
+                    <!-- Portfolio Item Start -->
+                    <div class="portfolio-item">
+                        <div class="portfolio-item-inner shadow-dark">
+                            <div class="portfolio-img">
+                                <img src="img/img.jpg" alt="">
+                            </div>
+                        </div>
+                    </div>
+                    <!-- Portfolio Item End -->
+                    <!-- Portfolio Item Start -->
+                    <div class="portfolio-item">
+                        <div class="portfolio-item-inner shadow-dark">
+                            <div class="portfolio-img">
+                                <img src="img/img.jpg" alt="">
+                            </div>
+                        </div>
+                    </div>
+                    <!-- Portfolio Item End -->
+                    <!-- Portfolio Item Start -->
+                    <div class="portfolio-item">
+                        <div class="portfolio-item-inner shadow-dark">
+                            <div class="portfolio-img">
+                                <img src="img/img.jpg" alt="">
+                            </div>
+                        </div>
+                    </div>
+                    <!-- Portfolio Item End -->
+                    <!-- Portfolio Item Start -->
+                    <div class="portfolio-item">
+                        <div class="portfolio-item-inner shadow-dark">
+                            <div class="portfolio-img">
+                                <img src="img/img.jpg" alt="">
+                            </div>
+                        </div>
+                    </div>
+                    <!-- Portfolio Item End -->
+                    <!-- Portfolio Item Start -->
+                    <div class="portfolio-item">
+                        <div class="portfolio-item-inner shadow-dark">
+                            <div class="portfolio-img">
+                                <img src="img/img.jpg" alt="">
+                            </div>
+                        </div>
+                    </div>
+                    <!-- Portfolio Item End -->
+                    <!-- Portfolio Item Start -->
+                    <div class="portfolio-item">
+                        <div class="portfolio-item-inner shadow-dark">
+                            <div class="portfolio-img">
+                                <img src="img/img.jpg" alt="">
+                            </div>
+                        </div>
+                    </div>
+                    <!-- Portfolio Item End -->
+                    <!-- Portfolio Item Start -->
+                    <div class="portfolio-item">
+                        <div class="portfolio-item-inner shadow-dark">
+                            <div class="portfolio-img">
+                                <img src="img/img.jpg" alt="">
+                            </div>
+                        </div>
+                    </div>
+                    <!-- Portfolio Item End -->
+                    <!-- Portfolio Item Start -->
+                    <div class="portfolio-item">
+                        <div class="portfolio-item-inner shadow-dark">
+                            <div class="portfolio-img">
+                                <img src="img/img.jpg" alt="">
+                            </div>
+                        </div>
+                    </div>
+                    <!-- Portfolio Item End -->
+                </div>
+            </div>
+        </section>
+        <!-- Project End -->
+    </main>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.12/typed.min.js"
+        referrerpolicy="no-referrer"></script>
+    <script src="JS/typing.js"></script>
 </body>
 
 </html>
