--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <header class="master-head">
         <div class="header-left">
             <a href="#landing-page" class="logo">
-                <img src="IMG/hehe.jpg" alt="Avatar" class="avatar">
+                <img src="img/hehe.jpg" alt="Avatar" class="avatar">
                 Jhon Melvin Dolot
             </a>
         </div>
