--- a/index.html
+++ b/index.html
@@ -1,14 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
-    <title>Web-Portfolio</title>
+    <title>Melvin Dolot | Portfolio</title>
 </head>
-
 <body>
     <!-- Header Start -->
     <header class="master-head">
@@ -156,5 +154,4 @@
         referrerpolicy="no-referrer"></script>
     <script src="js/typing.js"></script>
 </body>
-
 </html>
