--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,6 +8,7 @@
     <link rel="stylesheet" href="css/style.css">
     <title>Melvin Dolot | Portfolio</title>
 </head>
+
 <body>
     <!-- Header Start -->
     <header class="master-head">
@@ -20,7 +22,7 @@
             <nav class="navbar">
                 <ul class="nav">
                     <li class="nav-list"><a href="#project" class="btn">Projects</a></li>
-                    <li class="nav-list"><a href="" class="btn">About</a></li>
+                    <li class="nav-list"><a href="#me" class="btn">About</a></li>
                     <li class="nav-list"><a href="" class="btn">Contact</a></li>
                 </ul>
             </nav>
@@ -39,9 +41,7 @@
                                 aria-hidden="true">|</span></h3>
                         <p>
                             A Computer Engineering Technology student of Polytechnic University of the
-                            Philippines Sta Mesa. 
-                            <br>
-                             A self-taught developer. I love building things from scratch.
+                            Philippines Sta Mesa. A self-taught developer. I love building things from scratch.
                         </p>
                         <a href="#me" class="hire-btn">Check Background</a>
                     </div>
@@ -49,6 +49,159 @@
             </div>
         </section>
         <!-- Landing Page End -->
+
+        <!-- About Start -->
+        <section class="about hidden" id="me">
+            <div class="container">
+                <div class="row">
+                    <div class="section-title">
+                        <h2>About Me</h2>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="about-content">
+                        <div class="row">
+                            <div class="about-text">
+                                <h3>I'm Jhon Melvin Dolot <span>Aspiring Software Developer</span></h3>
+                                <p>
+                                    I'm passionate about solving problems and building websites and systems.
+                                    In my free time, I enjoy activities such as reading, learning and gaming.
+                                </p>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="personal-info">
+                                <div class="row">
+                                    <div class="info-item">
+                                        <p>Level : <span>21 (age)</span></p>
+                                    </div>
+                                    <div class="info-item">
+                                        <p>Email : <span><a href="mailto:dolotjhonmelvin@gmail.com"
+                                                    target="_blank">Click Here</a></span></p>
+                                    </div>
+                                    <div class="info-item">
+                                        <p>Phone : <span>0915 675 5637</span></p>
+                                    </div>
+                                    <div class="info-item">
+                                        <p>Job : <span>Looking for Internship</span></p>
+                                    </div>
+                                </div>
+                                <div class="row">
+                                    <div class="buttons">
+                                        <a href="https://drive.google.com/file/d/12JkMNbScK01a3UUOBEZG1G97BeF6ORUd/view?usp=sharing"
+                                            target="_blank" class="hire-btn">Download Résumé</a>
+                                        <a href="#contact" class="hire-btn">Hire Me</a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="skills">
+                                <div class="row">
+                                    <div class="skill-item">
+                                        <h5>Languagges</h5>
+                                        <p>HTML CSS JavaScript</p>
+                                        <p>PHP MySQL</p>
+                                        <p>JAVA Python</p>
+                                    </div>
+                                    <div class="skill-item">
+                                        <h5>Frameworks</h5>
+                                        <p>Bootstrap Astro</p>
+                                    </div>
+                                    <div class="skill-item">
+                                        <h5>Currently Learning</h5>
+                                        <p>JAVA Python</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <br>
+                        <div class="row">
+                            <div class="education">
+                                <h3 class="title">Education</h3>
+                                <div class="row">
+                                    <div class="timeline-box">
+                                        <div class="timeline">
+                                            <!-- Timeline Items -->
+                                            <div class="timeline-item">
+                                                <div class="circle-dot"></div>
+                                                <h3 class="timeline-date">
+                                                    <i class="bx bx-calendar"></i>2018-2020
+                                                </h3>
+                                                <h4 class="timeline-title">Science, Technology, Engineering, &amp;
+                                                    Mathematics (STEM)</h4>
+                                                <p class="timeline-text">
+                                                    Graduated @<a href="https://mpc.edu.ph">Marikina Polytechnic College</a>
+                                                </p>
+                                            </div>
+                                            <div class="timeline-item">
+                                                <div class="circle-dot"></div>
+                                                <h3 class="timeline-date">
+                                                    <i class="bx bx-calendar"></i>2020-2023
+                                                </h3>
+                                                <h4 class="timeline-title">Diploma in Computer Engineering
+                                                    Technology (DCpET)</h4>
+                                                <p class="timeline-text">
+                                                    Completed coursework in Data structures, Algorithms, Web Dev, Object-oriented Programming,  and Software Design.
+                                                </p>
+                                            </div>
+                                            <div class="timeline-item">
+                                                <div class="circle-dot"></div>
+                                                <h3 class="timeline-date">
+                                                    <i class="bx bx-calendar"></i>202X-202X
+                                                </h3>
+                                                <h4 class="timeline-title">Bachelor of Science in Computer
+                                                    Engineering(BSCpE)</h4>
+                                                <p class="timeline-text">
+                                                    Would like to continue to Bachelor
+                                                </p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="certification">
+                                <h3 class="title">Certification</h3>
+                                <div class="row">
+                                    <div class="timeline-box">
+                                        <div class="timeline">
+                                            <!-- Timeline Items -->
+                                            <div class="timeline-item">
+                                                <div class="circle-dot"></div>
+                                                <h3 class="timeline-date">
+                                                    <i class="bx bx-calendar"></i>2022
+                                                </h3>
+                                                <h4 class="timeline-title">Intermediate Front-End Development</h4>
+                                                <p class="timeline-text">Bayan Academy supported by J.P. Morgan
+                                                    Company</p>
+                                                    <br>
+                                                    <p class="timeline-text">JavaScript Course</p>
+                                            </div>
+                                            <div class="timeline-item">
+                                                <div class="circle-dot"></div>
+                                                <h3 class="timeline-date">
+                                                    <i class="bx bx-calendar"></i>2022
+                                                </h3>
+                                                <h4 class="timeline-title">Responsive Web Design</h4>
+                                                <p class="timeline-text">freeCodeCamp Certification</p>
+                                                <p class="timeline-text">HTML CSS & Media Queries</p>
+                                            </div>
+                                            <div class="timeline-item">
+                                                <div class="circle-dot"></div>
+                                                <h3 class="timeline-date">
+                                                    <i class="bx bx-calendar"></i>2022
+                                                </h3>
+                                                <h4 class="timeline-title">#</h4>
+                                                <p class="timeline-text">#</p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- About End -->
 
         <!-- Project Start -->
         <section class="projects" id="project">
@@ -59,91 +212,34 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="portfolio-heading">
-                        <h2>My List of Projects: </h2>
-                    </div>
-                </div>
-                <div class="row">
                     <!-- Portfolio Item Start -->
-                    <div class="portfolio-item">
-                        <div class="portfolio-item-inner shadow-dark">
-                            <div class="portfolio-img">
-                                <img src="img/img.jpg" alt="">
-                            </div>
+                    <div class="card">
+                        <img src="img/img.jpg" alt="">
+                        <div class="card-container">
+                          <h4><b>Solar Powered Intelligent 
+                            <br>
+                            Hydroponic System</b></h4>
+                          <p>CET Design Project</p>
                         </div>
-                    </div>
+                      </div>
                     <!-- Portfolio Item End -->
                     <!-- Portfolio Item Start -->
-                    <div class="portfolio-item">
-                        <div class="portfolio-item-inner shadow-dark">
-                            <div class="portfolio-img">
-                                <img src="img/img.jpg" alt="">
-                            </div>
+                    <div class="card">
+                        <img src="img/img.jpg" alt="">
+                        <div class="card-container">
+                          <h4><b>E-Commerce Website</b></h4>
+                          <p>HTML CSS JavaScript</p>
                         </div>
-                    </div>
+                      </div>
                     <!-- Portfolio Item End -->
                     <!-- Portfolio Item Start -->
-                    <div class="portfolio-item">
-                        <div class="portfolio-item-inner shadow-dark">
-                            <div class="portfolio-img">
-                                <img src="img/img.jpg" alt="">
-                            </div>
+                    <div class="card">
+                        <img src="img/img.jpg" alt="">
+                        <div class="card-container">
+                          <h4><b>Calculator (Program) </b></h4>
+                          <p>Python</p>
                         </div>
-                    </div>
-                    <!-- Portfolio Item End -->
-                    <!-- Portfolio Item Start -->
-                    <div class="portfolio-item">
-                        <div class="portfolio-item-inner shadow-dark">
-                            <div class="portfolio-img">
-                                <img src="img/img.jpg" alt="">
-                            </div>
-                        </div>
-                    </div>
-                    <!-- Portfolio Item End -->
-                    <!-- Portfolio Item Start -->
-                    <div class="portfolio-item">
-                        <div class="portfolio-item-inner shadow-dark">
-                            <div class="portfolio-img">
-                                <img src="img/img.jpg" alt="">
-                            </div>
-                        </div>
-                    </div>
-                    <!-- Portfolio Item End -->
-                    <!-- Portfolio Item Start -->
-                    <div class="portfolio-item">
-                        <div class="portfolio-item-inner shadow-dark">
-                            <div class="portfolio-img">
-                                <img src="img/img.jpg" alt="">
-                            </div>
-                        </div>
-                    </div>
-                    <!-- Portfolio Item End -->
-                    <!-- Portfolio Item Start -->
-                    <div class="portfolio-item">
-                        <div class="portfolio-item-inner shadow-dark">
-                            <div class="portfolio-img">
-                                <img src="img/img.jpg" alt="">
-                            </div>
-                        </div>
-                    </div>
-                    <!-- Portfolio Item End -->
-                    <!-- Portfolio Item Start -->
-                    <div class="portfolio-item">
-                        <div class="portfolio-item-inner shadow-dark">
-                            <div class="portfolio-img">
-                                <img src="img/img.jpg" alt="">
-                            </div>
-                        </div>
-                    </div>
-                    <!-- Portfolio Item End -->
-                    <!-- Portfolio Item Start -->
-                    <div class="portfolio-item">
-                        <div class="portfolio-item-inner shadow-dark">
-                            <div class="portfolio-img">
-                                <img src="img/img.jpg" alt="">
-                            </div>
-                        </div>
-                    </div>
+                      </div>
                     <!-- Portfolio Item End -->
                 </div>
             </div>
@@ -154,4 +250,5 @@
         referrerpolicy="no-referrer"></script>
     <script src="js/typing.js"></script>
 </body>
+
 </html>
