--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- CSS Files -->
+    <link href="https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
+    <!-- Title -->
     <title>Melvin Dolot | Portfolio</title>
 </head>
 
@@ -23,7 +26,7 @@
                 <ul class="nav">
                     <li class="nav-list"><a href="#project" class="btn">Projects</a></li>
                     <li class="nav-list"><a href="#me" class="btn">About</a></li>
-                    <li class="nav-list"><a href="" class="btn">Contact</a></li>
+                    <li class="nav-list"><a href="#contact" class="btn">Contact</a></li>
                 </ul>
             </nav>
         </div>
@@ -129,7 +132,8 @@
                                                 <h4 class="timeline-title">Science, Technology, Engineering, &amp;
                                                     Mathematics (STEM)</h4>
                                                 <p class="timeline-text">
-                                                    Graduated @<a href="https://mpc.edu.ph">Marikina Polytechnic College</a>
+                                                    Graduated @<a href="https://mpc.edu.ph">Marikina Polytechnic
+                                                        College</a>
                                                 </p>
                                             </div>
                                             <div class="timeline-item">
@@ -140,7 +144,8 @@
                                                 <h4 class="timeline-title">Diploma in Computer Engineering
                                                     Technology (DCpET)</h4>
                                                 <p class="timeline-text">
-                                                    Completed coursework in Data structures, Algorithms, Web Dev, Object-oriented Programming,  and Software Design.
+                                                    Completed coursework in Data structures, Algorithms, Web Dev,
+                                                    Object-oriented Programming, and Software Design.
                                                 </p>
                                             </div>
                                             <div class="timeline-item">
@@ -172,8 +177,8 @@
                                                 <h4 class="timeline-title">Intermediate Front-End Development</h4>
                                                 <p class="timeline-text">Bayan Academy supported by J.P. Morgan
                                                     Company</p>
-                                                    <br>
-                                                    <p class="timeline-text">JavaScript Course</p>
+                                                <br>
+                                                <p class="timeline-text">JavaScript Course</p>
                                             </div>
                                             <div class="timeline-item">
                                                 <div class="circle-dot"></div>
@@ -216,36 +221,88 @@
                     <div class="card">
                         <img src="img/img.jpg" alt="">
                         <div class="card-container">
-                          <h4><b>Solar Powered Intelligent 
-                            <br>
-                            Hydroponic System</b></h4>
-                          <p>CET Design Project</p>
+                            <h4><b>Solar Powered Intelligent
+                                    <br>
+                                    Hydroponic System</b></h4>
+                            <p>CET Design Project</p>
                         </div>
-                      </div>
+                    </div>
                     <!-- Portfolio Item End -->
                     <!-- Portfolio Item Start -->
                     <div class="card">
                         <img src="img/img.jpg" alt="">
                         <div class="card-container">
-                          <h4><b>E-Commerce Website</b></h4>
-                          <p>HTML CSS JavaScript</p>
+                            <h4><b>E-Commerce Website</b></h4>
+                            <p>HTML CSS JavaScript</p>
                         </div>
-                      </div>
+                    </div>
                     <!-- Portfolio Item End -->
                     <!-- Portfolio Item Start -->
                     <div class="card">
                         <img src="img/img.jpg" alt="">
                         <div class="card-container">
-                          <h4><b>Calculator (Program) </b></h4>
-                          <p>Python</p>
+                            <h4><b>Calculator (Program) </b></h4>
+                            <p>Python</p>
                         </div>
-                      </div>
+                    </div>
                     <!-- Portfolio Item End -->
                 </div>
             </div>
         </section>
         <!-- Project End -->
+
+        <!-- Contact Start -->
+        <section class="contact" id="contact">
+            <div class="container">
+                <div class="row">
+                    <div class="section-title">
+                        <h2>Get In Touch</h2>
+                    </div>
+                </div>
+                <h3 class="contact-title">If you have questions or inquries</h3>
+                <h4 class="contact-sub-title">Please contact me</h4>
+                <div class="row">
+                    <!-- Contact Item Start -->
+                    <div class="contact-info-item">
+                        <div class="icon"><i class="bx bxs-phone"></i></div>
+                        <h4>Call Me On</h4>
+                        <p>+63 915 675 5637</p>
+                    </div>
+                    <!-- Contact Item End -->
+                    <!-- Contact Item Start -->
+                    <div class="contact-info-item">
+                        <div class="icon"><i class="bx bxl-gmail"></i></div>
+                        <h4>Email Me On</h4>
+                        <a href="mailto:dolotjhonmelvin@gmail.com" class="a-tag">Gmail</a>
+                    </div>
+                    <!-- Contact Item End -->
+                    <!-- Contact Item Start -->
+                    <div class="contact-info-item">
+                        <div class="icon"><i class="bx bxl-linkedin"></i></div>
+                        <h4>Message Me On</h4>
+                        <p><a href="https://linkedin.com/in/melvin-dolot" class="a-tag">LinkedIn</a></p>
+                    </div>
+                    <!-- Contact Item End -->
+                    <!-- Contact Item Start -->
+                    <div class="contact-info-item">
+                        <div class="icon"><i class="bx bx-coffee"></i></div>
+                        <h4>Address</h4>
+                        <p>1611 Pasig City, Metro Manila-NCR</p>
+                    </div>
+                    <!-- Contact Item End -->
+                </div>
+                <h3 class="contact-title">Send me an Email</h3>
+                <h4 class="contact-sub-title"><em>“I will respond as my time and energy allow"</em></h4>
+            </div>
+        </section>
+        <!-- Contact End -->
     </main>
+    <footer>
+        <div>
+            <p>&copy; [2021] [Melvin | V3Xui]</p>
+            <p>All rights reserved.</p>
+        </div>
+    </footer>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.12/typed.min.js"
         referrerpolicy="no-referrer"></script>
     <script src="js/typing.js"></script>
