--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                                 </div>
                                 <div class="row">
                                     <div class="buttons">
-                                        <a href="https://drive.google.com/file/d/12JkMNbScK01a3UUOBEZG1G97BeF6ORUd/view?usp=sharing"
+                                        <a href="https://drive.google.com/file/d/1w7eavXd7z9M19PQbLndPXH15yNQ40kG1/view?usp=share_link"
                                             target="_blank" class="hire-btn">Download Résumé</a>
                                         <a href="#contact" class="hire-btn">Hire Me</a>
                                     </div>
