--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                                 <div class="row">
                                     <div class="buttons">
                                         <a href="https://drive.google.com/file/d/1w7eavXd7z9M19PQbLndPXH15yNQ40kG1/view?usp=share_link"
-                                            target="_blank" class="hire-btn">Download Résumé</a>
+                                            target="_blank" class="hire-btn" download>Download Résumé</a>
                                         <a href="#contact" class="hire-btn">Hire Me</a>
                                     </div>
                                 </div>
