--- a/index.html
+++ b/index.html
@@ -91,8 +91,8 @@
                                 </div>
                                 <div class="row">
                                     <div class="buttons">
-                                        <a href="https://drive.google.com/file/d/1w7eavXd7z9M19PQbLndPXH15yNQ40kG1/view?usp=share_link"
-                                            target="_blank" class="hire-btn" download>Download Résumé</a>
+                                        <a href="https://drive.google.com/u/0/uc?id=1w7eavXd7z9M19PQbLndPXH15yNQ40kG1&export=download"
+                                            target="_blank" class="hire-btn" download="">Download Résumé</a>
                                         <a href="#contact" class="hire-btn">Hire Me</a>
                                     </div>
                                 </div>
@@ -177,6 +177,7 @@
                                                 <h4 class="timeline-title">Intermediate Front-End Development</h4>
                                                 <p class="timeline-text">Bayan Academy supported by J.P. Morgan
                                                     Company</p>
+                                                <br>
                                                 <p class="timeline-text">JavaScript Course</p>
                                             </div>
                                             <div class="timeline-item">
